@startuml
class NodeMetrics {
    timestamp
    node_id
    cpu_util
    mem_util
    net_in_bytes
    net_out_bytes
    latency_ms
    +to_vector()
}

interface MetricsRepository {
    +upsert()
    +list_latest()
    +add_latency()
}

class InMemoryMetricsRepository
class RedisMetricsRepository

MetricsRepository <|.. InMemoryMetricsRepository
MetricsRepository <|.. RedisMetricsRepository

MetricsRepository --> NodeMetrics

@enduml